# QT_ACR122U

./: CMakeLists.txt  README.md  ctacs.ini
acr122u_linux_lib/Sample Scripts/: ACOS3 & ACOS6-SAM Mutual Authentication (3DES).txt  ACOS3 Card Programming (Read and Write).txt  ACOS6-SAM Card Programming.txt  Mifare Card Programming.txt  Mifare ULC Card Programming.txt
acr122u_linux_lib/acsccid-1.1.8/: Makefile  Makefile.in  aclocal.m4  config.h  config.h.in  config.status  configure  libtool
acr122u_linux_lib/acsccid-1.1.8/src/: Makefile  Makefile.in  libacsccid.la  libacsccid_la-acr38cmd.lo  libacsccid_la-ccid.lo  libacsccid_la-ccid_usb.lo  libacsccid_la-commands.lo  libacsccid_la-ifdhandler.lo  libacsccid_la-simclist.lo  libacsccid_la-strlcpy.lo  libacsccid_la-tokenparser.lo  libacsccid_la-utils.lo
acr122u_linux_lib/acsccid-1.1.8/src/.deps/: libacsccid_la-acr38cmd.Plo  libacsccid_la-ccid.Plo  libacsccid_la-ccid_usb.Plo  libacsccid_la-commands.Plo  libacsccid_la-ifdhandler.Plo  libacsccid_la-simclist.Plo  libacsccid_la-strlcpy.Plo  libacsccid_la-tokenparser.Plo  libacsccid_la-utils.Plo
acr122u_linux_lib/acsccid-1.1.8/src/.libs/: libacsccid.lai
acr122u_linux_lib/acsccid-1.1.8/src/openct/: libacsccid_la-buffer.lo  libacsccid_la-checksum.lo  libacsccid_la-proto-t1.lo
acr122u_linux_lib/ctacs_linux_bin-1.0.1/: ReadMe.txt  install.sh
acr122u_linux_lib/ctacs_linux_bin-1.0.1/lib/i386/: libctacs.la  (+1 more)
include/nfc/: NFC_Operate.h
src/nfc/: NFC_Operate.cpp  mifare.cpp  nfc-utils.cpp
test/: CMakeLists.txt  pcsc_demo.cpp  test_acr122u.cpp  test_cjson.cpp  test_nfc.cpp
(+9 files in other folders)
